maximum saturation bug #45214

Closed
opened 2015-06-27 19:58:19 +02:00 by Alexey · 8 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (All)
Worked: (None)

Short description of error
1.png
2.png
3.png
Exact steps for others to reproduce the error
No shadow error.blend
open this file

  1. Remder, look on shadow pass - we will have error
  2. Set diffuse color of material(on cube) with saturation not equal max, render again - working OK
    P.S. if we add texture, use object color, use vertex color - in all this combinations:
    if we have at least one color(used in this material) with saturation maximum - we will have bug
    if we have few colors with max saturation - in result we have color equal col1(with max saturation) + col2(with max saturation) + col3... all other colors will be ignored
    4.png
System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (All) Worked: (None) **Short description of error** ![1.png](https://archive.blender.org/developer/F197908/1.png) ![2.png](https://archive.blender.org/developer/F197910/2.png) ![3.png](https://archive.blender.org/developer/F197912/3.png) **Exact steps for others to reproduce the error** [No shadow error.blend](https://archive.blender.org/developer/F197914/No_shadow_error.blend) open this file 1. Remder, look on shadow pass - we will have error 2. Set diffuse color of material(on cube) with saturation not equal max, render again - working OK P.S. if we add texture, use object color, use vertex color - in all this combinations: if we have at least one color(used in this material) with saturation maximum - we will have bug if we have few colors with max saturation - in result we have color equal col1(with max saturation) + col2(with max saturation) + col3... all other colors will be ignored ![4.png](https://archive.blender.org/developer/F197919/4.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Author

maximum saturation must be equal 1, if we have at least 0.999 - it is not maximum and working will properly

maximum saturation must be equal 1, if we have at least 0.999 - it is not maximum and working will properly
Author

P.S.png

![P.S.png](https://archive.blender.org/developer/F197923/P.S.png)

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2015-06-28 10:46:58 +02:00

Confirmed, fix incoming.

Confirmed, fix incoming.

This issue was referenced by 2ef3c43c5d

This issue was referenced by 2ef3c43c5dbc98528616caf7788c5bb7a6ce087d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45214
No description provided.