Fix T45214: BI render: maximum saturation bug in shadow pass with non-shadow lighting.

In case scene lighting would only have non-shadow light source, shadow intensity
would remain to 'pitch black'...